@@ -84,7 +84,7 @@ public class ExplodedArchive implements Archive {
 
 	@Override
 	public URL getUrl() throws MalformedURLException {
-		return new URL("file", "", -1, this.root.toURI().getPath());
+		return this.root.toURI().toURL();
 	}
 
 	@Override
